maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:61: error: Unmatched closing brace '}' ignored here
}
^